--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -13,16 +13,21 @@
 			{% if pages %}
 			<ul>
 				{% for page in pages %}
-				<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+				<li>
+					<a href="{{ page.url }}">{{ page.title }}</a>
+				</li>
 				{% endfor %}
 			</ul>
 			{% else %}
 			<strong>No pages currently in category.</strong>
 			{% endif %}
 		{% else %}
-			The specified category does no exist.
+			The specified category does not exist.
 		{% endif %}
 		</div>
+		
+		<a href="/rango/">Home</a>
+		
 	</body>
 
 </html>
