--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -47,6 +47,7 @@
 		
 		<div>
 			<a href="/rango/about/">About</a><br />
+			<a href="/rango/add_category/">Add a New Category</a><br />
 			<img src="{% static 'images/rango.jpg' %}"
 				alt ="Picture of Rango" /> <!-- New line --> <!-- alt used to specify message if image not loaded -->
 		</div>
