--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -27,7 +27,7 @@
 		</div>
 		
 		<a href="/rango/">Home</a>
-		
+		<a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a><br />
 	</body>
 
 </html>
