chapter 10 with exercises

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -16,6 +16,9 @@
 			alt ="Picture of Rango" /> <!-- alt used to specify message if image not loaded -->
 		<img src="{{ MEDIA_URL }}cat.jpg"
 			alt ="Picture of a Cat" />
+		
+		<p>Visits: {{ visits }}</p>
+		
 	</div>
 {% endblock %}
 
