--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -5,6 +5,8 @@
 {% block title_block %}
 	Homepage
 {% endblock %}
+
+<!-- <p>Visits: {{ visits }}</p> -->
 	
 {% block body_block %}
 	<h1>Rango says...</h1>
